--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
           </div>
         </div>
 
+        <div class="game-over dummy block block--general hide"></div>
+
       </div>
     </div>
 
